--- a/favorites.html
+++ b/favorites.html
@@ -19,19 +19,16 @@
                 <li><a href="index.html">Etusivu</a></li>
                 <li><a href="favorites.html">Suosikit</a></li>
             </ul>
-        </nav>
-        <div class="search">
-            <p>Hae kirjastoja: <input type="text" id="haku" onkeyup="haeKirjastoja()">
-            <!--<button onclick="naytaLocalStorate()">Näytä local storage</button>--></p>
-        </div>
-        
+        </nav>       
     <div id="content">
-        <script src="./js/functions.js"></script>
         <section id="main">
         </section>
+        
+        <script src="./js/functions.js"></script>
+        <script>haeSuosikit();</script>
     </div>
     </div>
     </div>
 </body>
-
+<!--<a href="https://www.flaticon.com/free-icons/favorite" title="favorite icons">Favorite icons created by Aldo Cervantes - Flaticon</a>-->
 </html>
