--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             </ul>
         </nav>
         <div class="search">
-            <p>Hae kirjastoja: <input type="text" id="haku" onkeyup="haeKirjastoja()">
-            <!--<button onclick="naytaLocalStorate()">Näytä local storage</button>--></p>
+            <p>Hae kirjastoja: <input type="text" id="haku" onkeyup="haeKirjastoja()"></p>
         </div>
         
     <div id="content">
